# -standart-NFT-assets-vexanium

./: CMakeLists.txt  README.md  build.sh
include/: backtoken.hpp  stdvexassets.hpp
src/: CMakeLists.txt  stdvexassets.cpp
